--- a/src/main/resources/templates/manager-dashboard.html
+++ b/src/main/resources/templates/manager-dashboard.html
@@ -13,6 +13,7 @@
 </div>
 <div class="dg w-100 jcc">
     <a th:text="#{pending.users}" class="df jcc lang w-100" href="/manager/pending-users" style="font-size: 35px;border: solid white 2px;margin-top: 100px"></a>
+    <a th:text="#{all.users}" class="df jcc lang w-100" href="/manager/all-users" style="font-size: 35px;border: solid white 2px;margin-top: 100px"></a>
     <a th:text="#{courses}" class="df jcc lang w-100" href="/manager/courses" style="font-size: 35px;border: solid white 2px;margin-top: 100px"></a>
 </div>
 </body>
