--- a/src/main/resources/static/css/global.css
+++ b/src/main/resources/static/css/global.css
@@ -42,7 +42,10 @@ form{
 }
 input[type="text"],input[type="password"],input[type="email"]
 ,input[type="date"]
-,input[type="file"]{
+,input[type="file"]
+,input[type="number"]
+,textarea
+{
     font-size: 25px ;
     margin: 10px ;
 }
