--- a/src/main/resources/static/css/global.css
+++ b/src/main/resources/static/css/global.css
@@ -44,6 +44,7 @@ input[type="text"],input[type="password"],input[type="email"]
 ,input[type="date"]
 ,input[type="file"]
 ,input[type="number"]
+,input[type="checkbox"]
 ,textarea
 {
     font-size: 25px ;
@@ -54,7 +55,7 @@ label{
     margin: 10px !important;
 }
 .sb{
-    font-size: 30px !important;
+    font-size: 30px ;
     margin: 10px !important;
     padding: 5px 30px !important;
     background-color: #232323 !important;
